--- a/src/main/resources/templates/custom-login.html
+++ b/src/main/resources/templates/custom-login.html
@@ -27,14 +27,16 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         </p>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/google" role="link" style="text-transform: none;">
-            <img width="20" style="margin-right: 5px;" alt="Sign in with Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-            Sign in with Google
-        </a>
-        <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/github" role="link" style="text-transform: none;">
-            <img width="24" style="margin-right: 5px;" alt="Sign in with GitHub" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" />
-            Sign in with Github
-        </a>
+        <div th:if="${client_id == 'public-client2'}">
+            <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/google" role="link" style="text-transform: none;">
+                <img width="20" style="margin-right: 5px;" alt="Sign in with Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+                Sign in with Google
+            </a>
+            <a class="btn btn-light btn-block bg-white" href="/oauth2/authorization/github" role="link" style="text-transform: none;">
+                <img width="24" style="margin-right: 5px;" alt="Sign in with GitHub" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" />
+                Sign in with Github
+            </a>
+        </div>
     </form>
 </div>
 </body>
